--- a/devops/ansible/inventory.ini
+++ b/devops/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [web_servers]
-20.160.180.199 ansible_user=sergey ansible_ssh_private_key_file=~/.ssh/azure_key
+100.114.136.8 ansible_user=sergey ansible_ssh_private_key_file=~/.ssh/id_rsa
