--- a/.github/workflows/ansible-docker-deploy.yml
+++ b/.github/workflows/ansible-docker-deploy.yml
@@ -1,41 +1,46 @@
-name: Ansible and Docker Deployment
-
-on:
-  push:
-    branches: [ main, master ]
-  workflow_dispatch:
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ansible
-
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H 100.114.136.8 >> ~/.ssh/known_hosts
-
-      - name: Run Ansible playbook
-        run: |
-          cd devops/ansible
-          ansible-playbook -i inventory.ini playbook.yml
-
-      - name: Deploy with Docker script (fallback)
-        if: failure()
-        run: |
-          chmod +x devops/bash/deploy-container.sh
-          ./devops/bash/deploy-container.sh
+name: Ansible and Docker Deployment                                                                                                                                                                                                                                                       
+                                                                                                                                                                                                                                                                                          
+on:                                                                                                                                                                                                                                                                                       
+  push:                                                                                                                                                                                                                                                                                   
+    branches: [ main, master ]                                                                                                                                                                                                                                                            
+  workflow_dispatch:                                                                                                                                                                                                                                                                      
+                                                                                                                                                                                                                                                                                          
+jobs:                                                                                                                                                                                                                                                                                     
+  deploy:                                                                                                                                                                                                                                                                                 
+    runs-on: ubuntu-latest                                                                                                                                                                                                                                                                
+    steps:                                                                                                                                                                                                                                                                                
+      - name: Checkout code                                                                                                                                                                                                                                                               
+        uses: actions/checkout@v3                                                                                                                                                                                                                                                         
+                                                                                                                                                                                                                                                                                          
+      - name: Set up Python                                                                                                                                                                                                                                                               
+        uses: actions/setup-python@v4                                                                                                                                                                                                                                                     
+        with:                                                                                                                                                                                                                                                                             
+          python-version: '3.10'                                                                                                                                                                                                                                                          
+                                                                                                                                                                                                                                                                                          
+      - name: Install dependencies                                                                                                                                                                                                                                                        
+        run: |                                                                                                                                                                                                                                                                            
+          python -m pip install --upgrade pip                                                                                                                                                                                                                                             
+          pip install ansible                                                                                                                                                                                                                                                             
+                                                                                                                                                                                                                                                                                          
+      - name: Set up SSH key                                                                                                                                                                                                                                                              
+        run: |                                                                                                                                                                                                                                                                            
+          # Создаем директорию с явным указанием рабочей директории                                                                                                                                                                                                                       
+          mkdir -p $HOME/.ssh                                                                                                                                                                                                                                                             
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa                                                                                                                                                                                                                       
+          chmod 600 $HOME/.ssh/id_rsa                                                                                                                                                                                                                                                     
+          ssh-keyscan -H 100.114.136.8 >> $HOME/.ssh/known_hosts                                                                                                                                                                                                                          
+                                                                                                                                                                                                                                                                                          
+      - name: Run Ansible playbook                                                                                                                                                                                                                                                        
+        run: |                                                                                                                                                                                                                                                                            
+          # Обновим inventory.ini чтобы использовать новый путь к ключу                                                                                                                                                                                                                   
+          sed -i 's|~/.ssh/id_rsa|'"$HOME/.ssh/id_rsa"'|' devops/ansible/inventory.ini                                                                                                                                                                                                    
+          cd devops/ansible                                                                                                                                                                                                                                                               
+          ansible-playbook -i inventory.ini playbook.yml                                                                                                                                                                                                                                  
+                                                                                                                                                                                                                                                                                          
+      - name: Deploy with Docker script (fallback)                                                                                                                                                                                                                                        
+        if: failure()                                                                                                                                                                                                                                                                     
+        run: |                                                                                                                                                                                                                                                                            
+          chmod +x devops/bash/deploy-container.sh                                                                                                                                                                                                                                        
+          # Обновим путь к SSH ключу в скрипте deploy-container.sh                                                                                                                                                                                                                        
+          sed -i 's|SSH_KEY="~/.ssh/id_rsa"|SSH_KEY="'"$HOME/.ssh/id_rsa"'"|' devops/bash/deploy-container.sh                                                                                                                                                                             
+          ./devops/bash/deploy-container.sh 
