--- a/devops/ansible/inventory.ini
+++ b/devops/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [web_servers]
-100.114.136.8 ansible_user=sergey ansible_ssh_private_key_file=~/.ssh/id_rsa
+100.114.136.8 ansible_user=sergey ansible_ssh_private_key_file=~/.ssh/id_rsa ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
